# claude-helper

./: .gitignore  CLAUDE.md  _config.yml  index.md  main.py  pyproject.toml  test_agent.py  test_full.py  test_hybrid.py
coding_agent/: __init__.py  agent_core.py  agent_with_rag.py  config.py  context_manager.py  main.py  sub_agent.py  tools.py
doc_manager/: __init__.py  db_schema.py  document_linker.py  document_manager.py  document_reader.py  version_tracker.py
docs/: adaptive-prompt-design.md  chunk-improvement-design.md  claude-code-architecture.md  claude-code-master-guide.md  implementation-plan.md  local-claude-code.md
knowledge/: _index.yaml  decision_trees.yaml  domain_map.yaml  glossary.yaml  routing_rules.yaml  structure.yaml  synonyms.yaml  thermal.yaml
mail_task_extractor/: __init__.py  email_fetcher.py  email_parser.py  main.py  models.py  status_tracker.py  task_extractor.py  thread_analyzer.py
project_tracker/: __init__.py  cli.py  models.py  notification.py  progress_view.py  smart_assistant.py  templates.py  web_dashboard.py
scripts/: improve_chunks.py
space_rag/: __init__.py  data_collector.py  embedding_selector.py  knowledge_builder.py  rag_engine.py  space_glossary.py
src/: advanced_query_expander.py  agent.py  agent_team.py  chunk_cleaner.py  chunk_summarizer.py  config.py  context.py  context_injector.py  contextual_retrieval.py  cross_reference.py  document_processor.py  document_translator.py  graph_rag.py  guided_retrieval.py  hierarchical_chunker.py  hybrid_search.py  indexer.py  knowledge.py  knowledge_graph.py  llm_client.py  (+20 more)
(+16 files in other folders)
